--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,16 @@
         }
     ],
     "require": {
-        "typo3/cms-core": "^10.4.6"
+        "typo3/cms-core": "^10.4 || ^11.5.0"
     },
     "autoload": {
         "psr-4": {
             "C1\\FluidStyledSvg\\": "Classes/"
+        }
+    },
+    "extra": {
+        "typo3/cms": {
+            "extension-key": "c1_fluid_styled_svg"
         }
     }
 }
